<resources>
    <string name="app_name">AppTest</string>
    <string name="list_fragment_label">Sports</string>
    <string name="news_fragment_label">Sports News</string>
    <string name="title_placeholder">Title</string>
    <string name="card_translation_text">Translation</string>
    <string name="card_description_text">Discovered / Founded</string>
    <string name="places_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse
        eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor
        diam fringilla tellus, eu euismod mauris neque at neque. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit.Praesent ultrices congue rutrum. Phasellus elementum ipsum ac
        convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est
        vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.
        Phasellus elementum ipsum ac convallis aliquam. Suspendisse
        eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor
        diam fringilla tellus, eu euismod mauris neque at neque. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit.Praesent ultrices congue rutrum. Phasellus elementum ipsum ac
        convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est
        vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.
        Phasellus elementum ipsum ac convallis aliquam. Suspendisse
        eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor
        diam fringilla tellus, eu euismod mauris neque at neque. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit.Praesent ultrices congue rutrum. Phasellus elementum ipsum ac
        convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est
        vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="chichen_itza">Chichen-Itza</string>
    <string name="trans_chichen_itza">at the mouth of the well of Itza</string>
    <string name="discovery_chichen_itza">Discovered: 1841</string>
    <string name="desc1_chichen_itza">Chichen Itza was a large pre-Columbian city built by the Maya people of the Terminal Classic period. The archaeological site is located in Tinúm Municipality, Yucatán State, Mexico.\n\n Chichen Itza was a major focal point in the Northern Maya Lowlands from the Late Classic (c. AD 600–900) through the Terminal Classic (c. AD 800–900) and into the early portion of the Postclassic period (c. AD 900–1200). The site exhibits a multitude of architectural styles, reminiscent of styles seen in central Mexico and of the Puuc and Chenes styles of the Northern Maya lowlands. The presence of central Mexican styles was once thought to have been representative of direct migration or even conquest from central Mexico, but most contemporary interpretations view the presence of these non-Maya styles more as the result of cultural diffusion.\n\n Chichen Itza was one of the largest Maya cities and it was likely to have been one of the mythical great cities, or Tollans, referred to in later Mesoamerican literature. The city may have had the most diverse population in the Maya world, a factor that could have contributed to the variety of architectural styles at the site.\n\n The ruins of Chichen Itza are federal property, and the site\'s stewardship is maintained by Mexico\'s Instituto Nacional de Antropología e Historia (National Institute of Anthropology and History). The land under the monuments had been privately owned until 29 March 2010, when it was purchased by the state of Yucatán.\n\n Chichen Itza is one of the most visited archaeological sites in Mexico with over 2.6 million tourists in 2017.</string>
    <string name="desc2_chichen_itza">&lt;b>History&lt;/b> &lt;br>Maya name \"Chichen Itza\" means \"At the mouth of the well of the Itza\". This derives from chi\', meaning \"mouth\" or \"edge\", and chʼen or chʼeʼen, meaning \"well\". Itzá is the name of an ethnic-lineage group that gained political and economic dominance of the northern peninsula. One possible translation for Itza is \"enchanter (or enchantment) of the water\", from its (itz), \"sorcerer\", and ha, \"water\".&lt;br>&lt;br>\tThe name is spelled Chichén Itzá in Spanish, and the accents are sometimes maintained in other languages to show that both parts of the name are stressed on their final syllable. Other references prefer the Maya orthography, Chichʼen Itzaʼ (pronounced [tʃitʃʼen itsáʔ]). This form preserves the phonemic distinction between chʼ and ch, since the base word chʼeʼen (which, however, is not stressed in Maya) begins with a postalveolar ejective affricate consonant. The word \"Itzaʼ\" has a high tone on the \"a\" followed by a glottal stop (indicated by the apostrophe).&lt;br>&lt;br>\tEvidence in the Chilam Balam books indicates another, earlier name for this city prior to the arrival of the Itza hegemony in northern Yucatán. While most sources agree the first word means seven, there is considerable debate as to the correct translation of the rest. This earlier name is difficult to define because of the absence of a single standard of orthography, but it is represented variously as Uuc Yabnal (\"Seven Great House\"), Uuc Hab Nal (\"Seven Bushy Places\"), Uucyabnal (\"Seven Great Rulers\") or Uc Abnal (\"Seven Lines of Abnal\"). This name, dating to the Late Classic Period, is recorded both in the book of Chilam Balam de Chumayel and in hieroglyphic texts in the ruins.&lt;br>&lt;br>\tThe layout of Chichen Itza site core developed during its earlier phase of occupation, between 750 and 900 AD. Its final layout was developed after 900 AD, and the 10th century saw the rise of the city as a regional capital controlling the area from central Yucatán to the north coast, with its power extending down the east and west coasts of the peninsula. The earliest hieroglyphic date discovered at Chichen Itza is equivalent to 832 AD, while the last known date was recorded in the Osario temple in 998.&lt;br>&lt;br>&lt;b>ESTABLISHMENT&lt;/b>&lt;br>&lt;br>\tThe Late Classic city was centered upon the area to the southwest of the Xtoloc cenote, with the main architecture represented by the substructures now underlying the Las Monjas and Observatorio and the basal platform upon which they were built.&lt;br>&lt;br>&lt;b>ASCENDANCY&lt;/b>&lt;br>&lt;br>\tChichen Itza rose to regional prominence toward the end of the Early Classic period (roughly 600 AD). It was, however, toward the end of the Late Classic and into the early part of the Terminal Classic that the site became a major regional capital, centralizing and dominating political, sociocultural, economic, and ideological life in the northern Maya lowlands. The ascension of Chichen Itza roughly correlates with the decline and fragmentation of the major centers of the southern Maya lowlands.&lt;br>&lt;br>\tAs Chichen Itza rose to prominence, the cities of Yaxuna (to the south) and Coba (to the east) were suffering decline. These two cities had been mutual allies, with Yaxuna dependent upon Coba. At some point in the 10th century Coba lost a significant portion of its territory, isolating Yaxuna, and Chichen Itza may have directly contributed to the collapse of both cities.&lt;br>&lt;br>&lt;b>DECLINE&lt;/b>&lt;br>&lt;br>\tAccording to some colonial Mayan sources (e.g., the Book of Chilam Balam of Chumayel), Hunac Ceel, ruler of Mayapan, conquered Chichen Itza in the 13th century. Hunac Ceel supposedly prophesied his own rise to power. According to custom at the time, individuals thrown into the Cenote Sagrado were believed to have the power of prophecy if they survived. During one such ceremony, the chronicles state, there were no survivors, so Hunac Ceel leaped into the Cenote Sagrado, and when removed, prophesied his own ascension.&lt;br>&lt;br>\tWhile there is some archaeological evidence that indicates Chichén Itzá was at one time looted and sacked, there appears to be greater evidence that it could not have been by Mayapan, at least not when Chichén Itzá was an active urban center. Archaeological data now indicates that Chichen Itza declined as a regional center by 1100, before the rise of Mayapan. Ongoing research at the site of Mayapan may help resolve this chronological conundrum.&lt;br>&lt;br>\tAfter Chichén Itzá elite activities ceased, the city may not have been abandoned. When the Spanish arrived, they found a thriving local population, although it is not clear from Spanish sources if these Maya were living in Chichen Itza proper, or a nearby settlement. The relatively high population density in the region was a factor in the conquistadors\' decision to locate a capital there. According to post-Conquest sources, both Spanish and Maya, the Cenote Sagrado remained a place of pilgrimage.</string>
    <string name="archaeological_zones_label">Archaeology</string>
    <string name="home_label">Home</string>
    <string name="cities_label">Cities</string>
    <string name="nature_label">Nature</string>
    <string name="content_desc">null</string>
</resources>