<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="10dp"
    app:strokeColor="@android:color/background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/placesImage"
            android:layout_width="175dp"
            android:layout_height="150dp"
            android:padding="4dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_las_coloradas"
            tools:srcCompat="@drawable/ic_nature" />

        <TextView
            android:id="@+id/title"
            style="@style/cardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingTop="4dp"
            android:text="@string/title_placeholder"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/placesImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/translationTitle"
            style="@style/cardTitleTranslation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minLines="2"
            android:padding="0dp"
            android:text="@string/card_translation_text"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/placesImage"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/cardDescription"
            style="@style/foundationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:padding="4dp"
            android:singleLine="true"
            android:text="@string/card_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/placesImage"
            app:layout_constraintTop_toBottomOf="@+id/translationTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>