<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PlacesDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:contentScrim="@color/cornflower_blue"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/places_image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_chichen_itza"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/titleDetail"
                style="@style/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toBottomOf="@+id/placesImageDetail"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/title_placeholder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_history"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="48dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/content_desc"
                android:paddingTop="24dp"
                app:icon="@drawable/ic_history"
                app:layout_collapseMode="pin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_curiosities"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom | end"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/content_desc"
                app:icon="@drawable/ic_nature"
                app:layout_collapseMode="pin" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/placesDescription"
            style="@style/PlacesBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:text="@string/places_detail_text" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>